@@ -1,3 +1,7 @@
+2009-01-12  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: Implement validation of .debug_aranges.
+
 2009-01-11  Petr Machata  <pmachata@redhat.com>
 
 	* dwarflint.c (process_file): Handle absence of .debug_info,
